# whisperx-litellm

./: .dockerignore  .gitignore  .whisperx-version  Dockerfile  README.md  app.py  docker-compose.example.yml  litellm_config.example.yaml  pyproject.toml
.github/workflows/: docker-build.yml  tests.yml
docs/: API.md  CONTRIBUTING.md  DEVELOPMENT.md  INDEX.md  README.md  VERSIONING.md
scripts/: update-whisperx-version.sh
tests/: test_app.py
